// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Most Watched Page A11y I can see the skip to content link 1`] = `"Aller au contenu"`;

exports[`AMP Most Watched Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Most Watched Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Most Watched Page Analytics ATI 1`] = `
{
  "requests": {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=3&p=afrique.media.video.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x2=[amp]&x3=[news-afrique]&x4=[fr]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[list-datadriven]&x8=[simorgh]&x9=[Les%2520plus%2520vus%2520-%2520BBC%2520News%2520Afrique]&ref=\${documentReferrer}",
  },
  "transport": {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": {
    "trackPageview": {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Most Watched Page Analytics chartbeat 1`] = `
{
  "vars": {
    "contentType": "Most Watched",
    "domain": "test.bbc.co.uk",
    "sections": "Afrique, Afrique - Most Watched",
    "title": "Les plus vus - BBC News Afrique",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Afrique",
  "url": "/afrique",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 2`] = `
{
  "text": "Pourquoi vous pouvez faire confiance à BBC News",
  "url": "https://www.bbc.com/afrique/institutionelles-49283281",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 3`] = `
{
  "text": "Conditions d'utilisation",
  "url": "https://www.bbc.com/afrique/institutionelles-36826639",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 4`] = `
{
  "text": "A propos de la BBC",
  "url": "https://www.bbc.com/afrique/institutionelles-36826641",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 5`] = `
{
  "text": "Politique de confidentialité",
  "url": "https://www.bbc.com/afrique/institutionelles-36826642",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 7`] = `
{
  "text": "Contactez la BBC",
  "url": "https://www.bbc.co.uk/afrique/send/u50853159",
}
`;

exports[`AMP Most Watched Page Footer Anchors should match text and url 8`] = `
{
  "text": "Découvrez notre approche en matière de liens externes.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Most Watched Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Most Watched Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/afrique"`;

exports[`AMP Most Watched Page Footer Paragraphs should match text 1`] = `"© 2024 BBC. La BBC n'est pas responsable du contenu des sites externes. Découvrez notre approche en matière de liens externes."`;

exports[`AMP Most Watched Page Header I can see the branding 1`] = `"BBC News, Afrique"`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 1`] = `
{
  "text": "Accueil",
  "url": "/afrique",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 2`] = `
{
  "text": "Présidentielle Sénégal 2024",
  "url": "/afrique/topics/c0vj3r1jjd2t",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 3`] = `
{
  "text": "Afrique",
  "url": "/afrique/topics/cvqxn2k7kv7t",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 4`] = `
{
  "text": "Monde",
  "url": "/afrique/topics/cvqxn21vx11t",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 5`] = `
{
  "text": "Santé",
  "url": "/afrique/topics/c06gq9jxz3rt",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 6`] = `
{
  "text": "Bien-être",
  "url": "/afrique/topics/c0vmyy90q8zt",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 7`] = `
{
  "text": "Science et technologie",
  "url": "/afrique/topics/crezq2zk0q4t",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 8`] = `
{
  "text": "Economie",
  "url": "/afrique/topics/cnq687nr9v1t",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 9`] = `
{
  "text": "Culture",
  "url": "/afrique/topics/cnq687nrrw8t",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 10`] = `
{
  "text": "Vidéos",
  "url": "/afrique/topics/cz4vn9gyd6rt",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 11`] = `
{
  "text": "Nos émissions",
  "url": "/afrique/media-54074891",
}
`;

exports[`AMP Most Watched Page Header Navigation link should match text and url 12`] = `
{
  "text": "Ecoutez en direct",
  "url": "/afrique/bbc_afrique_radio/liveradio",
}
`;

exports[`AMP Most Watched Page I can see the list items 1`] = `"0:16Vidéo, Test asset, Durée 0,1626 avril 2017"`;

exports[`AMP Most Watched Page I can see the list items 2`] = `"Ecoutez, Gelila, miraculée des eaux 217 juin 2016"`;

exports[`AMP Most Watched Page I can see the list items 3`] = `"Ecoutez, Gelila, miraculée des eaux17 juin 2016"`;

exports[`AMP Most Watched Page I can see the list items 4`] = `"0:16Vidéo, Test asset, Durée 0,1626 avril 2017"`;

exports[`AMP Most Watched Page I can see the list items 5`] = `"Vidéo, Test 2 - Magari yasiyotumia mafuta yaanza kazi Kenya9 août 2016"`;

exports[`AMP Most Watched Page I can see the list items 6`] = `"Ecoutez, L’invité BBC Afrique 21/06/2016 : Ibrahim Maïga short24 juin 2016"`;

exports[`AMP Most Watched Page Main heading should match text 1`] = `"Les plus vus"`;

exports[`AMP Most Watched Page Main heading should match text 2`] = `"Les plus vus"`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/afrique/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-72x72.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-96x96.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-128x128.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-144x144.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-152x152.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-180x180.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-192x192.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-384x384.png",
}
`;

exports[`AMP Most Watched Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/afrique/images/icons/icon-512x512.png",
}
`;

exports[`AMP Most Watched Page SEO Canonical link 1`] = `"http://localhost:7080/afrique/media/video"`;

exports[`AMP Most Watched Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Most Watched Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Most Watched Page SEO Heading level 1 1`] = `"Les plus vus"`;

exports[`AMP Most Watched Page SEO Lang attribute 1`] = `"fr"`;

exports[`AMP Most Watched Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "fr",
        "name": "French",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/afrique/media/video",
        "@type": "WebPage",
        "name": "Les plus vus",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
          "width": 1024,
        },
        "name": "BBC News Afrique",
        "publishingPrinciples": "https://www.bbc.com/afrique/institutionelles-49283281",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png",
      "url": "http://localhost:7080/afrique/media/video",
    },
  ],
}
`;

exports[`AMP Most Watched Page SEO OG description 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"`;

exports[`AMP Most Watched Page SEO OG image alt 1`] = `"BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG locale 1`] = `"fr"`;

exports[`AMP Most Watched Page SEO OG site name 1`] = `"BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG title 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO OG type 1`] = `"website"`;

exports[`AMP Most Watched Page SEO OG url 1`] = `"http://localhost:7080/afrique/media/video"`;

exports[`AMP Most Watched Page SEO Page title 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Most Watched Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Most Watched Page SEO Twitter creator 1`] = `"@bbcafrique"`;

exports[`AMP Most Watched Page SEO Twitter description 1`] = `"Les plus vus - BBC News Afrique"`;

exports[`AMP Most Watched Page SEO Twitter image alt 1`] = `"BBC News Afrique"`;

exports[`AMP Most Watched Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"`;

exports[`AMP Most Watched Page SEO Twitter site 1`] = `"@bbcafrique"`;

exports[`AMP Most Watched Page SEO Twitter title 1`] = `"Les plus vus - BBC News Afrique"`;
